# Trabalho_EDA-2

./: .gitignore  README.md  analise_similaridade.py  gerar_visualizacao_bfs.py  grafo_culinario.html  main.py  pyproject.toml  requirements.txt  visualizacao.py  visualizacao_similaridade.py
analises/: gerar_visualizacao_bfs.py  visualizacao.py  visualizacao_similaridade.py
data/output/: relatorio.md  resultados.json  visualizacao_bfs.html
data/processed/: arestas_com_peso.csv  metadados_grafo.json
src/: clique.py  cosseno.py  grafo.py  relatorio.py  similaridade.py
src/fila/: __init__.py  bfs.py  fila.py
src/normalizacao/: README.md  entidades.py  nlp.py  preparacao.py  validacao.py
testes/: teste_bfs.py
